@@ -1,6 +1,3 @@
-* vpcd --hung_rpc can cause client to hang forever while login action
-  repeatedly times out and is reinitiated ("real" action never makes it to 
-  head of device queue).
 * Replace bogus buffer.c with Chris's generic circular buffer module.
 * Store scripts in a list and search the list for the script name, rather than
   hard code the list.  
